# Hyperbolic-AgentKit

./: .dockerignore  .env.example  .gitignore  AI_RESEARCHER_GUIDE.md  CLAUDE.md  LANGCHAIN_CHATBOT_WALKTHROUGH.md  LANGCHAIN_CODE_EXAMPLES.md  LANGCHAIN_VISUAL_FLOW.md  LANGCHAIN_VISUAL_GUIDE.md  LICENSE  REACT_IMPLEMENTATION_DEEP_DIVE.md  README.md  TOOL_COMPATIBILITY_GUIDE.md  chatbot.py  custom_twitter_actions.py  dockerfile  fly.toml  gradio_ui.py  pyproject copy.toml  pyproject.toml  pyproject.toml.bak  twitter_knowledge_base.py  twitter_state.py  twitter_state_ai_researcher.db  twitter_state_chainyoda.db  utils.py
.claude/agents/: venmo-payment-sender.md
base_utils/: __init__.py  custom_llm_providers.py  custom_llm_providers_v2.py  harvard_openai_wrapper.py  llm_commands.py  llm_factory.py  prompts.py  test_direct_openai.py  tooldescriptions.py  utils.py
browser_agent/: __init__.py  browser_tool.py  browser_toolkit.py
characters/: ai_researcher.json  chainyoda.json  default.json  hyperbolic.json  rolypoly.json  template.json
dev_data/: README.md
dev_data/architectures/: 2025-07-24-agent-tools-architecture.md  2025-07-24-coinbase-conditional-init.md  2025-07-24-remote-file-tools-design.md
dev_data/characters/: ai_researcher_notes.md
dev_data/fixes/: 2025-07-24-claude-sonnet-4-tool-calling-issue.md  2025-07-24-remote-write-file-error-fix.md
docs/: HARVARD_API_COMPLETE.md  HARVARD_API_INTEGRATION.md
edited_clips/: Anomapt5_edits.json
examples/: using_custom_openai_endpoints.md  using_different_models.md  using_harvard_api.md
github_agent/: custom_github_actions.py
hyperbolic_agentkit_core/: config.py
hyperbolic_agentkit_core/actions/: __init__.py  get_available_gpus.py  get_current_balance.py  get_gpu_status.py  get_spend_history.py  link_wallet_address.py  remote_glob.py  remote_grep.py  remote_list_directory.py  remote_read_file.py  remote_read_many_files.py  remote_replace.py  remote_shell.py  remote_write_file.py  rent_compute.py  terminate_compute.py
hyperbolic_langchain/agent_toolkits/: hyperbolic_toolkit.py
hyperbolic_langchain/tools/: hyperbolic_tool.py
jsonoutputs/: 2025 crypto pre_000.json  2025 crypto pre_001.json  2025 crypto pre_002.json  2025 crypto pre_003.json  2025 crypto pre_004.json  2025 crypto pre_005.json  2025 crypto pre_006.json  2025 crypto pre_007.json  2025 crypto pre_008.json  ANDRE FINAL..._000.json  ANDRE FINAL..._001.json  ANDRE FINAL..._002.json  ANDRE FINAL..._003.json  ANDRE FINAL..._004.json  ANDRE FINAL..._005.json  ANDRE FINAL..._006.json  ANDRE FINAL..._007.json  ANDRE FINAL..._008.json  ANDRE FINAL..._009.json  ANDRE FINAL..._010.json  ANDRE FINAL..._011.json  Akshatpt1.json  Akshatpt3.json  Aligned full vid_000.json  Aligned full vid_001.json  Aligned full vid_002.json  Aligned full vid_003.json  Aligned full vid_004.json  Aligned full vid_005.json  AltLayer FullVid_000.json  AltLayer FullVid_001.json  AltLayer FullVid_002.json  AltLayer FullVid_003.json  AltLayer FullVid_004.json  AltLayer FullVid_005.json  Andrew FullVid_000.json  Andrew FullVid_001.json  Anomapt1.json  Anomapt2.json  Anomapt3.json  (+110 more)
podcast_agent/: aiagenteditor.py  geminivideo.py  generatevoice.py  podcast_knowledge_base.py  usevoice.py
server/src/server/: app.py  prompt.py  (+1 more)
tests/: test_api_key_debug.py  test_chatbot_harvard.py  test_chatbot_simple.py  test_harvard_api.py  test_harvard_raw_api.py  test_tool_calling.py
twitter_agent/: custom_twitter_actions.py  twitter_knowledge_base.py
writing_agent/: __init__.py  document_sender.py  web_searcher.py  writing_agent.py  writing_tool.py
youtube_scraper/: README.md  README_youtube_scraper.md  __init__.py  create_cookies.sh  cron_setup_instructions.md  db_utilities.py  main.py  run_youtube_scraper.sh  video_database.py  youtube_scraper.py
(+4 files in other folders)
